Added Edit battery tests and extra battery config report tests to regression. Added reprocess complete assessment to regression script

--- a/PrecisionRecruitment/PrecisionRecruitment/PrecisionRecruitment.csproj
+++ b/PrecisionRecruitment/PrecisionRecruitment/PrecisionRecruitment.csproj
@@ -194,6 +194,30 @@
       <UserCode>true</UserCode>
       <id>a463e76a-7c81-4bb1-a5c9-9bea26702cb7</id>
     </Compile>
+    <Compile Include="AddBatteryPage\Click_Gear_Icon.cs">
+      <BoundTo>994992a8-524c-4ce2-a70a-b38ca2e863d4</BoundTo>
+      <DependentUpon>Click_Gear_Icon.rxrec</DependentUpon>
+      <RecorderCode>true</RecorderCode>
+      <id>bfed12e6-e658-4ee5-bcdd-8c611656f643</id>
+    </Compile>
+    <Compile Include="AddBatteryPage\Click_Gear_Icon.UserCode.cs">
+      <BoundTo>994992a8-524c-4ce2-a70a-b38ca2e863d4</BoundTo>
+      <DependentUpon>Click_Gear_Icon.rxrec</DependentUpon>
+      <UserCode>true</UserCode>
+      <id>efbed585-d4ea-40ab-a4cb-8f1edc6edd2e</id>
+    </Compile>
+    <Compile Include="AddBatteryPage\Click_Modify_Real_Test.cs">
+      <BoundTo>bf720a73-08bb-4e9d-96ca-0153f94b1edf</BoundTo>
+      <DependentUpon>Click_Modify_Real_Test.rxrec</DependentUpon>
+      <RecorderCode>true</RecorderCode>
+      <id>5f1809bc-eb0e-4afc-86ff-1d7b3bce6d46</id>
+    </Compile>
+    <Compile Include="AddBatteryPage\Click_Modify_Real_Test.UserCode.cs">
+      <BoundTo>bf720a73-08bb-4e9d-96ca-0153f94b1edf</BoundTo>
+      <DependentUpon>Click_Modify_Real_Test.rxrec</DependentUpon>
+      <UserCode>true</UserCode>
+      <id>df79a381-9546-459b-9aff-4291680ca56e</id>
+    </Compile>
     <Compile Include="AddBatteryPage\Click_ResponseOptions_Checkbox.cs">
       <BoundTo>efaaa8a4-e1ba-4976-b844-1731ac6fcad5</BoundTo>
       <DependentUpon>Click_ResponseOptions_Checkbox.rxrec</DependentUpon>
@@ -205,6 +229,30 @@
       <DependentUpon>Click_ResponseOptions_Checkbox.rxrec</DependentUpon>
       <UserCode>true</UserCode>
       <id>c6c1270a-b926-4c05-9181-0bd0c755fcb3</id>
+    </Compile>
+    <Compile Include="AddBatteryPage\Click_Save_Battery_Properties.cs">
+      <BoundTo>42074310-b9c5-4226-9ebb-6da11c9f9edd</BoundTo>
+      <DependentUpon>Click_Save_Battery_Properties.rxrec</DependentUpon>
+      <RecorderCode>true</RecorderCode>
+      <id>d0b3126f-2f89-46de-990b-d1fdfb70ed36</id>
+    </Compile>
+    <Compile Include="AddBatteryPage\Click_Save_Battery_Properties.UserCode.cs">
+      <BoundTo>42074310-b9c5-4226-9ebb-6da11c9f9edd</BoundTo>
+      <DependentUpon>Click_Save_Battery_Properties.rxrec</DependentUpon>
+      <UserCode>true</UserCode>
+      <id>94d961ac-140b-4ee6-bfd9-e9100d99f748</id>
+    </Compile>
+    <Compile Include="AddBatteryPage\Click_Save_Settings.cs">
+      <BoundTo>608f71b3-e29f-4225-af0f-a0bde0aad9a8</BoundTo>
+      <DependentUpon>Click_Save_Settings.rxrec</DependentUpon>
+      <RecorderCode>true</RecorderCode>
+      <id>78ecad3b-44af-4ee7-a38e-139303a8a0b1</id>
+    </Compile>
+    <Compile Include="AddBatteryPage\Click_Save_Settings.UserCode.cs">
+      <BoundTo>608f71b3-e29f-4225-af0f-a0bde0aad9a8</BoundTo>
+      <DependentUpon>Click_Save_Settings.rxrec</DependentUpon>
+      <UserCode>true</UserCode>
+      <id>50cdfc55-08ae-4888-85fa-77fa7c11fba3</id>
     </Compile>
     <Compile Include="AddBatteryPage\Enter_BatteryDescription.cs">
       <DependentUpon>Enter_BatteryDescription.rxrec</DependentUpon>
@@ -278,6 +326,18 @@
       <UserCode>true</UserCode>
       <id>98b7c853-b0c9-489c-8b9f-9d87934a9877</id>
     </Compile>
+    <Compile Include="AddBatteryPage\Increase_Test_Time.cs">
+      <BoundTo>eb57ea3c-8f63-48c3-93c7-ce8a035d6de2</BoundTo>
+      <DependentUpon>Increase_Test_Time.rxrec</DependentUpon>
+      <RecorderCode>true</RecorderCode>
+      <id>d02c3dea-cac6-4106-8ca7-be6dc2ae7328</id>
+    </Compile>
+    <Compile Include="AddBatteryPage\Increase_Test_Time.UserCode.cs">
+      <BoundTo>eb57ea3c-8f63-48c3-93c7-ce8a035d6de2</BoundTo>
+      <DependentUpon>Increase_Test_Time.rxrec</DependentUpon>
+      <UserCode>true</UserCode>
+      <id>6ee04719-d557-440c-b931-4c7e2aa4454d</id>
+    </Compile>
     <Compile Include="AddBatteryPage\Select_BatteryTemplate.cs">
       <BoundTo>560be4fc-ec38-45bb-9785-aa9415e0a615</BoundTo>
       <DependentUpon>Select_BatteryTemplate.rxrec</DependentUpon>
@@ -313,6 +373,18 @@
       <UserCode>true</UserCode>
       <id>d32b553f-47db-4e91-836a-12a8005c467c</id>
       <BoundTo>ae55dcad-7e93-4fca-b9b8-4a45f78c77d0</BoundTo>
+    </Compile>
+    <Compile Include="AddBatteryPage\Validate_Block_Edited.cs">
+      <BoundTo>2fdca253-650b-48b7-8366-9a9e175a77cb</BoundTo>
+      <DependentUpon>Validate_Block_Edited.rxrec</DependentUpon>
+      <RecorderCode>true</RecorderCode>
+      <id>1350e90b-f9aa-40d0-b3af-f8bdc87b450f</id>
+    </Compile>
+    <Compile Include="AddBatteryPage\Validate_Block_Edited.UserCode.cs">
+      <BoundTo>2fdca253-650b-48b7-8366-9a9e175a77cb</BoundTo>
+      <DependentUpon>Validate_Block_Edited.rxrec</DependentUpon>
+      <UserCode>true</UserCode>
+      <id>1c86499a-9b02-480e-8565-0f389c7b1e8d</id>
     </Compile>
     <Compile Include="AddBatteryPage\Validate_Edit_Battery.cs">
       <DependentUpon>Validate_Edit_Battery.rxrec</DependentUpon>
@@ -1201,6 +1273,18 @@
       <UserCode>true</UserCode>
       <id>05bd7b6d-b4bd-48a2-b3e0-42654a63a29c</id>
       <BoundTo>f756df1f-07d7-49e4-bf5b-bbebb37a024b</BoundTo>
+    </Compile>
+    <Compile Include="APIModules\APIV2_Update_Demographic.cs">
+      <BoundTo>6cacb9dc-7b0f-47a2-af7b-a058ee41d427</BoundTo>
+      <DependentUpon>APIV2_Update_Demographic.rxrec</DependentUpon>
+      <RecorderCode>true</RecorderCode>
+      <id>3d3d310a-2945-4e59-b440-102e212ee45f</id>
+    </Compile>
+    <Compile Include="APIModules\APIV2_Update_Demographic.UserCode.cs">
+      <BoundTo>6cacb9dc-7b0f-47a2-af7b-a058ee41d427</BoundTo>
+      <DependentUpon>APIV2_Update_Demographic.rxrec</DependentUpon>
+      <UserCode>true</UserCode>
+      <id>eaea255b-3dc6-4e6d-81bd-16231629e93b</id>
     </Compile>
     <Compile Include="APIModules\Clear_ExternalID.cs">
       <id>1937a057-0137-4c18-8e37-8a056f57ab2c</id>
@@ -2129,6 +2213,18 @@
       <UserCode>true</UserCode>
       <id>e66b6cf8-7c26-491e-b2a9-c9bec9d156fc</id>
     </Compile>
+    <Compile Include="ReportsPage\Click_SpecDeviation_Button.cs">
+      <BoundTo>ccecc203-9b9b-4a7c-8a2b-925ec9ef221e</BoundTo>
+      <DependentUpon>Click_SpecDeviation_Button.rxrec</DependentUpon>
+      <RecorderCode>true</RecorderCode>
+      <id>ec3341c6-962c-47e1-8943-34131f80470a</id>
+    </Compile>
+    <Compile Include="ReportsPage\Click_SpecDeviation_Button.UserCode.cs">
+      <BoundTo>ccecc203-9b9b-4a7c-8a2b-925ec9ef221e</BoundTo>
+      <DependentUpon>Click_SpecDeviation_Button.rxrec</DependentUpon>
+      <UserCode>true</UserCode>
+      <id>d16d9057-86e2-46fc-8f19-a68c25370706</id>
+    </Compile>
     <Compile Include="ReportsPage\Validate_Report_Generated.cs">
       <BoundTo>92fb529e-0e75-4de0-8440-1cc08c4b5951</BoundTo>
       <DependentUpon>Validate_Report_Generated.rxrec</DependentUpon>
@@ -2830,10 +2926,30 @@
       <id>06b60d6d-e779-48cd-8ba2-cc5224a92982</id>
       <recordtableid>545119d5-ad94-47a3-8dc5-73a30b181f28</recordtableid>
     </None>
+    <None Include="AddBatteryPage\Click_Gear_Icon.rxrec">
+      <BoundTo>e85e1725-ce51-410d-8e88-5ea245b392f9</BoundTo>
+      <id>994992a8-524c-4ce2-a70a-b38ca2e863d4</id>
+      <recordtableid>c53e2e79-d2d1-413f-b728-0a065189c55c</recordtableid>
+    </None>
+    <None Include="AddBatteryPage\Click_Modify_Real_Test.rxrec">
+      <BoundTo>e85e1725-ce51-410d-8e88-5ea245b392f9</BoundTo>
+      <id>bf720a73-08bb-4e9d-96ca-0153f94b1edf</id>
+      <recordtableid>15158e27-62c6-421e-8f81-285f7498807a</recordtableid>
+    </None>
     <None Include="AddBatteryPage\Click_ResponseOptions_Checkbox.rxrec">
       <BoundTo>e85e1725-ce51-410d-8e88-5ea245b392f9</BoundTo>
       <id>efaaa8a4-e1ba-4976-b844-1731ac6fcad5</id>
       <recordtableid>89539dc9-b02b-489b-ade4-df904874dac3</recordtableid>
+    </None>
+    <None Include="AddBatteryPage\Click_Save_Battery_Properties.rxrec">
+      <BoundTo>e85e1725-ce51-410d-8e88-5ea245b392f9</BoundTo>
+      <id>42074310-b9c5-4226-9ebb-6da11c9f9edd</id>
+      <recordtableid>f1b91855-9333-4352-be6d-add46a2183bd</recordtableid>
+    </None>
+    <None Include="AddBatteryPage\Click_Save_Settings.rxrec">
+      <BoundTo>e85e1725-ce51-410d-8e88-5ea245b392f9</BoundTo>
+      <id>608f71b3-e29f-4225-af0f-a0bde0aad9a8</id>
+      <recordtableid>50a5f6ec-164a-4d95-8e16-f85e36053404</recordtableid>
     </None>
     <None Include="AddBatteryPage\Enter_BatteryDescription.rxrec">
       <BoundTo>e85e1725-ce51-410d-8e88-5ea245b392f9</BoundTo>
@@ -2865,6 +2981,11 @@
       <id>97a82ac4-146f-4f71-880e-24f91f26e62a</id>
       <recordtableid>aa1f6d10-6783-4d59-b81b-8bebede2e0a8</recordtableid>
     </None>
+    <None Include="AddBatteryPage\Increase_Test_Time.rxrec">
+      <BoundTo>e85e1725-ce51-410d-8e88-5ea245b392f9</BoundTo>
+      <id>eb57ea3c-8f63-48c3-93c7-ce8a035d6de2</id>
+      <recordtableid>9710ff30-ed7d-4907-8f0b-7f1ed3ffd3ab</recordtableid>
+    </None>
     <None Include="AddBatteryPage\Select_BatteryTemplate.rxrec">
       <BoundTo>e85e1725-ce51-410d-8e88-5ea245b392f9</BoundTo>
       <id>560be4fc-ec38-45bb-9785-aa9415e0a615</id>
@@ -2879,6 +3000,11 @@
       <BoundTo>e85e1725-ce51-410d-8e88-5ea245b392f9</BoundTo>
       <id>ae55dcad-7e93-4fca-b9b8-4a45f78c77d0</id>
       <recordtableid>41eae272-e70a-4c8c-976b-316352274ed1</recordtableid>
+    </None>
+    <None Include="AddBatteryPage\Validate_Block_Edited.rxrec">
+      <BoundTo>e85e1725-ce51-410d-8e88-5ea245b392f9</BoundTo>
+      <id>2fdca253-650b-48b7-8366-9a9e175a77cb</id>
+      <recordtableid>1b383883-28ec-426a-807d-328ddbc0af92</recordtableid>
     </None>
     <None Include="AddBatteryPage\Validate_Edit_Battery.rxrec">
       <BoundTo>e85e1725-ce51-410d-8e88-5ea245b392f9</BoundTo>
@@ -3257,6 +3383,11 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
       <id>d5ff2cb5-53d0-4a08-b333-5780fcdd273f</id>
     </Content>
+    <None Include="APIModules\APIV2_Update_Demographic.rxrec">
+      <BoundTo>e85e1725-ce51-410d-8e88-5ea245b392f9</BoundTo>
+      <id>6cacb9dc-7b0f-47a2-af7b-a058ee41d427</id>
+      <recordtableid>70ee2cb7-7981-4f16-9f4b-d4fbea372124</recordtableid>
+    </None>
     <None Include="BatteriesPage\Click_Add_Battery.rxrec">
       <BoundTo>e85e1725-ce51-410d-8e88-5ea245b392f9</BoundTo>
       <id>d0d31c20-dffc-4309-bc08-efbd13ad6e72</id>
@@ -3740,6 +3871,11 @@
       <BoundTo>e85e1725-ce51-410d-8e88-5ea245b392f9</BoundTo>
       <id>1f1f8805-03a0-4166-a78f-f8e7a17f7363</id>
       <recordtableid>c8f46ef8-b4a0-4ce4-b7d9-4b2b351076c2</recordtableid>
+    </None>
+    <None Include="ReportsPage\Click_SpecDeviation_Button.rxrec">
+      <BoundTo>e85e1725-ce51-410d-8e88-5ea245b392f9</BoundTo>
+      <id>ccecc203-9b9b-4a7c-8a2b-925ec9ef221e</id>
+      <recordtableid>55a4bccd-360a-4169-b5f5-492a3939b382</recordtableid>
     </None>
     <None Include="ReportsPage\Validate_Report_Generated.rxrec">
       <BoundTo>e85e1725-ce51-410d-8e88-5ea245b392f9</BoundTo>
