Changed Data source and added DateTime generator. Made slight timing changes to prevent Data Loss Mitigation tests failing

--- a/PrecisionRecruitment/PrecisionRecruitment/PrecisionRecruitment.csproj
+++ b/PrecisionRecruitment/PrecisionRecruitment/PrecisionRecruitment.csproj
@@ -2441,6 +2441,9 @@
     <Compile Include="StudiesPage\Validate_Sponsor_Descending.cs">
       <id>f3c073fd-7f56-4a1f-856b-fd1199268875</id>
     </Compile>
+    <Compile Include="UserCodeCollections\DateTimeGenerator.cs">
+      <id>65e47713-cd63-497f-87c0-4630b7b823ef</id>
+    </Compile>
     <Compile Include="UserCodeCollections\DragNDropLibrary.cs">
       <id>19f9a2c7-334d-4309-9a0a-38d719aaf5c6</id>
     </Compile>
@@ -3517,6 +3520,9 @@
       <id>13458f0b-9c1b-4178-8f93-c5604045c620</id>
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <None Include="csv\GMLT_Extract.csv">
+      <id>0c540524-bbb7-46ae-aea3-81e0aada534a</id>
+    </None>
     <None Include="ExtractsPage\Click_DownloadExtract_Button.rxrec">
       <BoundTo>e85e1725-ce51-410d-8e88-5ea245b392f9</BoundTo>
       <id>4f4a5e80-6031-406a-aca2-bf906a5d93c7</id>
@@ -3851,6 +3857,13 @@
     </None>
     <None Include="rawData\FollowUp.txt">
       <id>abfa05ce-faaf-4835-ac0f-a9de2c65e92c</id>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Include="rawData\GMLT_Data.txt">
+      <id>d1f075d2-cb3f-4a5c-9709-c7d054e4c342</id>
+    </None>
+    <None Include="rawData\PartialCBB.txt">
+      <id>143f4843-56e6-4f29-9a89-63cbece30a3f</id>
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
     <None Include="rawData\rawData1.txt">
