Added some extra RCC tests, fixes some timing issues

--- a/RedCapCloud/RedCapCloud/RedCapCloud.csproj
+++ b/RedCapCloud/RedCapCloud/RedCapCloud.csproj
@@ -260,6 +260,18 @@
       <UserCode>true</UserCode>
       <id>d0dcaec5-37e5-4a76-8e62-8036624b71ce</id>
     </Compile>
+    <Compile Include="AddSitePage\Click_Cancel_Button.cs">
+      <BoundTo>91d17ae5-2b62-4d24-81d3-8dd9f4d26174</BoundTo>
+      <DependentUpon>Click_Cancel_Button.rxrec</DependentUpon>
+      <RecorderCode>true</RecorderCode>
+      <id>e2356f87-ddaa-434b-8fdc-d9830f6419ed</id>
+    </Compile>
+    <Compile Include="AddSitePage\Click_Cancel_Button.UserCode.cs">
+      <BoundTo>91d17ae5-2b62-4d24-81d3-8dd9f4d26174</BoundTo>
+      <DependentUpon>Click_Cancel_Button.rxrec</DependentUpon>
+      <UserCode>true</UserCode>
+      <id>add80fbb-6cf3-41f0-a999-9063df92a8a8</id>
+    </Compile>
     <Compile Include="AddSitePage\Enter_SiteEnrolment.cs">
       <DependentUpon>Enter_SiteEnrolment.rxrec</DependentUpon>
       <RecorderCode>true</RecorderCode>
@@ -791,6 +803,66 @@
       <id>c116d9ea-266b-4c4d-9ce0-77569c010e59</id>
       <BoundTo>8e8a526b-ff86-4c8b-950c-e243b6ca2605</BoundTo>
     </Compile>
+    <Compile Include="PermissionsPage\Click_Add_Role.cs">
+      <BoundTo>c59d2af8-645b-4264-8f4e-115039bed781</BoundTo>
+      <DependentUpon>Click_Add_Role.rxrec</DependentUpon>
+      <RecorderCode>true</RecorderCode>
+      <id>338aede5-011a-4d77-8474-9d8bce101c2e</id>
+    </Compile>
+    <Compile Include="PermissionsPage\Click_Add_Role.UserCode.cs">
+      <BoundTo>c59d2af8-645b-4264-8f4e-115039bed781</BoundTo>
+      <DependentUpon>Click_Add_Role.rxrec</DependentUpon>
+      <UserCode>true</UserCode>
+      <id>dbf4bb93-5e63-4069-ba34-df0a06d964d8</id>
+    </Compile>
+    <Compile Include="PermissionsPage\Click_Cancel_Button.cs">
+      <BoundTo>52221837-c899-4198-9444-b91adbea51fb</BoundTo>
+      <DependentUpon>Click_Cancel_Button.rxrec</DependentUpon>
+      <RecorderCode>true</RecorderCode>
+      <id>c6539f59-507c-4f58-af90-1e5c70b2f31f</id>
+    </Compile>
+    <Compile Include="PermissionsPage\Click_Cancel_Button.UserCode.cs">
+      <BoundTo>52221837-c899-4198-9444-b91adbea51fb</BoundTo>
+      <DependentUpon>Click_Cancel_Button.rxrec</DependentUpon>
+      <UserCode>true</UserCode>
+      <id>0c0e4b7d-0bf3-4f68-aecb-19640bf8e9c5</id>
+    </Compile>
+    <Compile Include="PermissionsPage\Click_Permissions_Tab.cs">
+      <BoundTo>f85322af-731e-40a0-a595-ec65b0905914</BoundTo>
+      <DependentUpon>Click_Permissions_Tab.rxrec</DependentUpon>
+      <RecorderCode>true</RecorderCode>
+      <id>8851a4d7-930c-45c7-9685-93faeba27f48</id>
+    </Compile>
+    <Compile Include="PermissionsPage\Click_Permissions_Tab.UserCode.cs">
+      <BoundTo>f85322af-731e-40a0-a595-ec65b0905914</BoundTo>
+      <DependentUpon>Click_Permissions_Tab.rxrec</DependentUpon>
+      <UserCode>true</UserCode>
+      <id>0f32ca38-4c47-448a-99ed-458fdd5be8e3</id>
+    </Compile>
+    <Compile Include="PermissionsPage\Click_SaveAndExit_Button.cs">
+      <BoundTo>f3a5cdb6-6505-4972-8bd3-1e7a5477aae1</BoundTo>
+      <DependentUpon>Click_SaveAndExit_Button.rxrec</DependentUpon>
+      <RecorderCode>true</RecorderCode>
+      <id>cafa1f90-0b33-4877-a912-c5debaef74fe</id>
+    </Compile>
+    <Compile Include="PermissionsPage\Click_SaveAndExit_Button.UserCode.cs">
+      <BoundTo>f3a5cdb6-6505-4972-8bd3-1e7a5477aae1</BoundTo>
+      <DependentUpon>Click_SaveAndExit_Button.rxrec</DependentUpon>
+      <UserCode>true</UserCode>
+      <id>bd9f0014-8e6a-4ab3-a9c9-979a8b5f8b2c</id>
+    </Compile>
+    <Compile Include="PermissionsPage\Enter_Admin_RoleName.cs">
+      <BoundTo>8a082609-8f15-4cd2-bdf8-531ebdceeec1</BoundTo>
+      <DependentUpon>Enter_Admin_RoleName.rxrec</DependentUpon>
+      <RecorderCode>true</RecorderCode>
+      <id>90a04e93-795f-44e2-a81f-23716af6123a</id>
+    </Compile>
+    <Compile Include="PermissionsPage\Enter_Admin_RoleName.UserCode.cs">
+      <BoundTo>8a082609-8f15-4cd2-bdf8-531ebdceeec1</BoundTo>
+      <DependentUpon>Enter_Admin_RoleName.rxrec</DependentUpon>
+      <UserCode>true</UserCode>
+      <id>13080066-f2d6-4514-9f62-85913fd02a95</id>
+    </Compile>
     <Compile Include="Program.cs">
       <id>d9e6c745-288d-4722-bdb4-46ee3b72f9ae</id>
     </Compile>
@@ -1055,6 +1127,42 @@
       <UserCode>true</UserCode>
       <id>313a66b0-d24c-4b81-99b3-c43c65e92224</id>
     </Compile>
+    <Compile Include="UsersPage\Click_Integration_User.cs">
+      <BoundTo>2140c08d-f791-46fa-b82d-1143d11f4e3a</BoundTo>
+      <DependentUpon>Click_Integration_User.rxrec</DependentUpon>
+      <RecorderCode>true</RecorderCode>
+      <id>19a6f7e5-447e-4c06-8a39-6497f4ae39ba</id>
+    </Compile>
+    <Compile Include="UsersPage\Click_Integration_User.UserCode.cs">
+      <BoundTo>2140c08d-f791-46fa-b82d-1143d11f4e3a</BoundTo>
+      <DependentUpon>Click_Integration_User.rxrec</DependentUpon>
+      <UserCode>true</UserCode>
+      <id>ad796666-99ee-4b69-9526-259a8f480ee3</id>
+    </Compile>
+    <Compile Include="UsersPage\Click_Users_Tab.cs">
+      <BoundTo>33066448-4a93-4178-be3a-70b27610903b</BoundTo>
+      <DependentUpon>Click_Users_Tab.rxrec</DependentUpon>
+      <RecorderCode>true</RecorderCode>
+      <id>2bc62a37-95f8-4640-b1d8-b18d02bcaa51</id>
+    </Compile>
+    <Compile Include="UsersPage\Click_Users_Tab.UserCode.cs">
+      <BoundTo>33066448-4a93-4178-be3a-70b27610903b</BoundTo>
+      <DependentUpon>Click_Users_Tab.rxrec</DependentUpon>
+      <UserCode>true</UserCode>
+      <id>67da7625-b42c-44c1-a173-e6ed2ae03fb1</id>
+    </Compile>
+    <Compile Include="UsersPage\Click_Delete_User.cs">
+      <BoundTo>afa80407-52b7-4862-a297-290bb182e13e</BoundTo>
+      <DependentUpon>Click_Delete_User.rxrec</DependentUpon>
+      <RecorderCode>true</RecorderCode>
+      <id>9f927f85-42ce-4010-add7-8b498a7df75b</id>
+    </Compile>
+    <Compile Include="UsersPage\Click_Delete_User.UserCode.cs">
+      <BoundTo>afa80407-52b7-4862-a297-290bb182e13e</BoundTo>
+      <DependentUpon>Click_Delete_User.rxrec</DependentUpon>
+      <UserCode>true</UserCode>
+      <id>5f26ccd1-efef-4834-b9ec-65551df59a40</id>
+    </Compile>
     <Compile Include="ValidationModules\Compare_Outcomes.cs">
       <BoundTo>a3182151-0719-4211-8651-3047420940af</BoundTo>
       <DependentUpon>Compare_Outcomes.rxrec</DependentUpon>
@@ -1078,6 +1186,18 @@
       <DependentUpon>Validate_CBB_Outcomes_Displayed.rxrec</DependentUpon>
       <UserCode>true</UserCode>
       <id>31ffb3a4-e616-4b45-97da-ef4b9e566ea2</id>
+    </Compile>
+    <Compile Include="ValidationModules\Validate_Duplicate_Site.cs">
+      <BoundTo>155ca2a1-6d30-4f4f-a840-5b9b2db21555</BoundTo>
+      <DependentUpon>Validate_Duplicate_Site.rxrec</DependentUpon>
+      <RecorderCode>true</RecorderCode>
+      <id>31b499cc-468d-4def-87e5-cd40d329fb04</id>
+    </Compile>
+    <Compile Include="ValidationModules\Validate_Duplicate_Site.UserCode.cs">
+      <BoundTo>155ca2a1-6d30-4f4f-a840-5b9b2db21555</BoundTo>
+      <DependentUpon>Validate_Duplicate_Site.rxrec</DependentUpon>
+      <UserCode>true</UserCode>
+      <id>fceecc32-fd94-41e2-8c6d-10d63545701e</id>
     </Compile>
     <Compile Include="ValidationModules\Validate_EventDef_Entry.cs">
       <DependentUpon>Validate_EventDef_Entry.rxrec</DependentUpon>
@@ -1114,6 +1234,30 @@
       <DependentUpon>Validate_EventDef_Type.rxrec</DependentUpon>
       <UserCode>true</UserCode>
       <id>3f9cceae-5fff-4dfa-99ff-8d273e4e8cf9</id>
+    </Compile>
+    <Compile Include="ValidationModules\Validate_Integration_User.cs">
+      <BoundTo>0a7dff37-8079-4a82-aa10-132e63bf5d5a</BoundTo>
+      <DependentUpon>Validate_Integration_User.rxrec</DependentUpon>
+      <RecorderCode>true</RecorderCode>
+      <id>36dcc870-56d8-43a1-9725-66c3c727a72f</id>
+    </Compile>
+    <Compile Include="ValidationModules\Validate_Integration_User.UserCode.cs">
+      <BoundTo>0a7dff37-8079-4a82-aa10-132e63bf5d5a</BoundTo>
+      <DependentUpon>Validate_Integration_User.rxrec</DependentUpon>
+      <UserCode>true</UserCode>
+      <id>a2fb4c26-331c-451a-853d-e48ba51a41e8</id>
+    </Compile>
+    <Compile Include="ValidationModules\Validate_Role_Exists.cs">
+      <BoundTo>1ee45741-9c35-4be4-af45-141e0a3979ad</BoundTo>
+      <DependentUpon>Validate_Role_Exists.rxrec</DependentUpon>
+      <RecorderCode>true</RecorderCode>
+      <id>f1a64288-333e-4b07-9d32-1852c78b249c</id>
+    </Compile>
+    <Compile Include="ValidationModules\Validate_Role_Exists.UserCode.cs">
+      <BoundTo>1ee45741-9c35-4be4-af45-141e0a3979ad</BoundTo>
+      <DependentUpon>Validate_Role_Exists.rxrec</DependentUpon>
+      <UserCode>true</UserCode>
+      <id>ecffbc06-7601-4072-b8d0-f90ec5d03b91</id>
     </Compile>
     <Compile Include="ValidationModules\Validate_SiteEntry.cs">
       <BoundTo>5e66ae25-2cac-40ae-9218-bdc2eb22502a</BoundTo>
@@ -1202,6 +1346,11 @@
       <BoundTo>f9948728-2258-4ffd-97ec-9a388bad3d54</BoundTo>
       <id>6b026ce4-9a85-4396-881e-92687314f82e</id>
       <recordtableid>55026c2e-7197-4596-8c0c-6275a4b2fc64</recordtableid>
+    </None>
+    <None Include="AddSitePage\Click_Cancel_Button.rxrec">
+      <BoundTo>f9948728-2258-4ffd-97ec-9a388bad3d54</BoundTo>
+      <id>91d17ae5-2b62-4d24-81d3-8dd9f4d26174</id>
+      <recordtableid>3eed078e-21fa-4a2b-8b00-15598a3de0a8</recordtableid>
     </None>
     <None Include="AddSitePage\Enter_SiteEnrolment.rxrec">
       <BoundTo>f9948728-2258-4ffd-97ec-9a388bad3d54</BoundTo>
@@ -1454,6 +1603,31 @@
       <id>8e8a526b-ff86-4c8b-950c-e243b6ca2605</id>
       <recordtableid>43197699-bc3a-4d20-ac7b-de542bc93625</recordtableid>
     </None>
+    <None Include="PermissionsPage\Click_Add_Role.rxrec">
+      <BoundTo>f9948728-2258-4ffd-97ec-9a388bad3d54</BoundTo>
+      <id>c59d2af8-645b-4264-8f4e-115039bed781</id>
+      <recordtableid>908b1bd4-4ae7-427e-a460-36c1b3123579</recordtableid>
+    </None>
+    <None Include="PermissionsPage\Click_Cancel_Button.rxrec">
+      <BoundTo>f9948728-2258-4ffd-97ec-9a388bad3d54</BoundTo>
+      <id>52221837-c899-4198-9444-b91adbea51fb</id>
+      <recordtableid>46339326-5556-49b0-b4c8-e21a6af83074</recordtableid>
+    </None>
+    <None Include="PermissionsPage\Click_Permissions_Tab.rxrec">
+      <BoundTo>f9948728-2258-4ffd-97ec-9a388bad3d54</BoundTo>
+      <id>f85322af-731e-40a0-a595-ec65b0905914</id>
+      <recordtableid>8efcf7d4-69cc-42d2-ae3b-1098d5657e85</recordtableid>
+    </None>
+    <None Include="PermissionsPage\Click_SaveAndExit_Button.rxrec">
+      <BoundTo>f9948728-2258-4ffd-97ec-9a388bad3d54</BoundTo>
+      <id>f3a5cdb6-6505-4972-8bd3-1e7a5477aae1</id>
+      <recordtableid>96070906-2b7f-4bdf-9278-d4b16e401657</recordtableid>
+    </None>
+    <None Include="PermissionsPage\Enter_Admin_RoleName.rxrec">
+      <BoundTo>f9948728-2258-4ffd-97ec-9a388bad3d54</BoundTo>
+      <id>8a082609-8f15-4cd2-bdf8-531ebdceeec1</id>
+      <recordtableid>c1dd6568-0e79-41e3-8707-7e61513e716d</recordtableid>
+    </None>
     <None Include="rawData\40yo_Tier1.txt">
       <id>e7c48cfe-d77f-4420-a60f-c5aa72c8666c</id>
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
@@ -1582,6 +1756,21 @@
       <id>5b99876b-690f-47b3-a78e-9ef040320ebb</id>
       <recordtableid>14393025-d700-47c7-9152-6833ae9f4bed</recordtableid>
     </None>
+    <None Include="UsersPage\Click_Integration_User.rxrec">
+      <BoundTo>f9948728-2258-4ffd-97ec-9a388bad3d54</BoundTo>
+      <id>2140c08d-f791-46fa-b82d-1143d11f4e3a</id>
+      <recordtableid>4fdaf16e-b932-4bc1-a7d1-1705281622ba</recordtableid>
+    </None>
+    <None Include="UsersPage\Click_Users_Tab.rxrec">
+      <BoundTo>f9948728-2258-4ffd-97ec-9a388bad3d54</BoundTo>
+      <id>33066448-4a93-4178-be3a-70b27610903b</id>
+      <recordtableid>5717b68e-f292-4d84-a099-c667a0b8dd0e</recordtableid>
+    </None>
+    <None Include="UsersPage\Click_Delete_User.rxrec">
+      <BoundTo>f9948728-2258-4ffd-97ec-9a388bad3d54</BoundTo>
+      <id>afa80407-52b7-4862-a297-290bb182e13e</id>
+      <recordtableid>7f2ad2c0-d507-4bb9-be7a-7fbbe554384d</recordtableid>
+    </None>
     <None Include="ValidationModules\Compare_Outcomes.rxrec">
       <BoundTo>f9948728-2258-4ffd-97ec-9a388bad3d54</BoundTo>
       <id>a3182151-0719-4211-8651-3047420940af</id>
@@ -1591,6 +1780,11 @@
       <BoundTo>f9948728-2258-4ffd-97ec-9a388bad3d54</BoundTo>
       <id>4576bf3f-9a7d-413f-a521-162332f21eb6</id>
       <recordtableid>1a6e768c-7dae-4e53-8a84-cff627502e8a</recordtableid>
+    </None>
+    <None Include="ValidationModules\Validate_Duplicate_Site.rxrec">
+      <id>155ca2a1-6d30-4f4f-a840-5b9b2db21555</id>
+      <recordtableid>ae1e6ad8-af51-44db-a6f4-b2bb5ccec42a</recordtableid>
+      <BoundTo>f9948728-2258-4ffd-97ec-9a388bad3d54</BoundTo>
     </None>
     <None Include="ValidationModules\Validate_EventDef_Entry.rxrec">
       <BoundTo>f9948728-2258-4ffd-97ec-9a388bad3d54</BoundTo>
@@ -1606,6 +1800,16 @@
       <BoundTo>f9948728-2258-4ffd-97ec-9a388bad3d54</BoundTo>
       <id>55d48f20-4dc2-4779-94e0-c62f28c7ad20</id>
       <recordtableid>38ac56a4-549f-425e-8362-e03119999cf5</recordtableid>
+    </None>
+    <None Include="ValidationModules\Validate_Integration_User.rxrec">
+      <BoundTo>f9948728-2258-4ffd-97ec-9a388bad3d54</BoundTo>
+      <id>0a7dff37-8079-4a82-aa10-132e63bf5d5a</id>
+      <recordtableid>cae86e8e-e479-4299-8864-71608011c45f</recordtableid>
+    </None>
+    <None Include="ValidationModules\Validate_Role_Exists.rxrec">
+      <BoundTo>f9948728-2258-4ffd-97ec-9a388bad3d54</BoundTo>
+      <id>1ee45741-9c35-4be4-af45-141e0a3979ad</id>
+      <recordtableid>03c7f0bd-ae57-45d1-809b-55412eb05a36</recordtableid>
     </None>
     <None Include="ValidationModules\Validate_SiteEntry.rxrec">
       <BoundTo>f9948728-2258-4ffd-97ec-9a388bad3d54</BoundTo>
@@ -1660,6 +1864,12 @@
     </Folder>
     <Folder Include="General">
       <id>c6760b20-5f7b-48cb-97b4-14d07bcd945a</id>
+    </Folder>
+    <Folder Include="PermissionsPage">
+      <id>9f890f29-3590-4907-a0bd-dc77456d31e9</id>
+    </Folder>
+    <Folder Include="UsersPage">
+      <id>6dc57c5d-1e73-4aec-b1e8-6cdad178779d</id>
     </Folder>
     <Folder Include="StudiesPage">
       <id>f8d39fb6-a3f0-4521-b679-77142fdf4595</id>
