Minor stability updates, changed variables to point to QCPD environment

--- a/PrecisionRecruitment/PrecisionRecruitment/PrecisionRecruitment.csproj
+++ b/PrecisionRecruitment/PrecisionRecruitment/PrecisionRecruitment.csproj
@@ -3541,6 +3541,10 @@
     <None Include="csv\GMLT_Extract.csv">
       <id>0c540524-bbb7-46ae-aea3-81e0aada534a</id>
     </None>
+    <None Include="csv\PRD1752.csv">
+      <id>568dbc08-0377-4410-a76a-afdc6fe47e53</id>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <None Include="ExtractsPage\Click_DownloadExtract_Button.rxrec">
       <BoundTo>e85e1725-ce51-410d-8e88-5ea245b392f9</BoundTo>
       <id>4f4a5e80-6031-406a-aca2-bf906a5d93c7</id>
@@ -3882,6 +3886,10 @@
     </None>
     <None Include="rawData\PartialCBB.txt">
       <id>143f4843-56e6-4f29-9a89-63cbece30a3f</id>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Include="rawData\PRD1752.txt">
+      <id>5954d02c-d6ef-471e-9504-529b1e5061a9</id>
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
     <None Include="rawData\rawData1.txt">
